[gd_scene load_steps=44 format=3 uid="uid://d3li7qguhm3e0"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/fraction_subtraction_gameplay.gd" id="1_3v0i1"]
[ext_resource type="Texture2D" uid="uid://f4a5kyl64epc" path="res://assets/ui/tex_box/speech_bubble.png" id="2_7hs2c"]
[ext_resource type="PackedScene" uid="uid://0q0ebxluougn" path="res://scenes/ui/energy_bar.tscn" id="2_gwan3"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="3_nmmeg"]
[ext_resource type="Texture2D" uid="uid://cwqgqjuufunw3" path="res://assets/floor_1/npc/Raket idle animation.png" id="5_8wxc3"]
[ext_resource type="Texture2D" uid="uid://bcwo6kvwrvp2x" path="res://assets/floor_1/npc/racoon ninja sprite.png" id="5_t1n7a"]
[ext_resource type="Texture2D" uid="uid://b8a3c1sdxsqwv" path="res://assets/floor_1/npc/reactions/happy racoon sprite.png" id="6_e31xs"]
[ext_resource type="Texture2D" uid="uid://v37nxstby7g0" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/board.png" id="7_da0m5"]
[ext_resource type="Texture2D" uid="uid://c3kclf3andxv2" path="res://assets/floor_1/npc/reactions/unhappy racoon sprite.png" id="7_jeq4t"]
[ext_resource type="Texture2D" uid="uid://brh6b8ufqdjks" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/board_box.png" id="8_pyrl6"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="9_05esg"]
[ext_resource type="Texture2D" uid="uid://bii2pqay365r6" path="res://assets/floor_1/npc/reactions/raket right answer.png" id="9_ufabg"]
[ext_resource type="Texture2D" uid="uid://byd46pktkxgbm" path="res://assets/floor_2/npc/Wizard Rat.png" id="10_pcr5b"]
[ext_resource type="Texture2D" uid="uid://kex21phpt41e" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/button_box.png" id="10_tw1ng"]
[ext_resource type="Texture2D" uid="uid://cq26hp0n7mmv2" path="res://assets/floor_1/npc/reactions/raket wrong answer.png" id="10_xu4xp"]
[ext_resource type="AudioStream" uid="uid://c5usoabj7ebry" path="res://audio/sound_effects/Correct Answer.wav" id="17_qy7u5"]
[ext_resource type="AudioStream" uid="uid://d4gfci1awar1a" path="res://audio/sound_effects/Wrong Answer.wav" id="18_81rye"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s6je1"]
atlas = ExtResource("5_t1n7a")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aikm4"]
atlas = ExtResource("5_t1n7a")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxmdt"]
atlas = ExtResource("5_t1n7a")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy17n"]
atlas = ExtResource("5_t1n7a")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xmfg"]
atlas = ExtResource("6_e31xs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5psgd"]
atlas = ExtResource("6_e31xs")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k0lf"]
atlas = ExtResource("6_e31xs")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2k3e"]
atlas = ExtResource("6_e31xs")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g2cc"]
atlas = ExtResource("7_jeq4t")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbl1h"]
atlas = ExtResource("7_jeq4t")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5i6q"]
atlas = ExtResource("7_jeq4t")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mxpf"]
atlas = ExtResource("7_jeq4t")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mua4a"]
atlas = ExtResource("5_8wxc3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0v63"]
atlas = ExtResource("5_8wxc3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4stp"]
atlas = ExtResource("5_8wxc3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xejf3"]
atlas = ExtResource("5_8wxc3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1kh"]
atlas = ExtResource("9_ufabg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx6wp"]
atlas = ExtResource("9_ufabg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bg12"]
atlas = ExtResource("10_xu4xp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx4pi"]
atlas = ExtResource("10_xu4xp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny68d"]
atlas = ExtResource("10_pcr5b")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xaqyb"]
atlas = ExtResource("10_pcr5b")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ejcc"]
atlas = ExtResource("10_pcr5b")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtp2g"]
atlas = ExtResource("10_pcr5b")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbydi"]
atlas = ExtResource("10_pcr5b")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_p2kin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6je1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aikm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxmdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy17n")
}],
"loop": true,
"name": &"masked_figure",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xmfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5psgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k0lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2k3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k0lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2k3e")
}],
"loop": false,
"name": &"masked_figure_correct",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g2cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbl1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5i6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mxpf")
}],
"loop": false,
"name": &"masked_figure_wrong",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mua4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0v63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4stp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xejf3")
}],
"loop": true,
"name": &"raket",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx6wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx6wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx6wp")
}],
"loop": false,
"name": &"raket_correct",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bg12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bg12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bg12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4pi")
}],
"loop": false,
"name": &"raket_wrong",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny68d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xaqyb")
}],
"loop": true,
"name": &"wizard_rat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ejcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtp2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbydi")
}],
"loop": true,
"name": &"wizard_rat_correct",
"speed": 5.0
}]

[node name="WordedFractionGameplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 28.0
offset_top = 31.0
offset_right = 28.0
offset_bottom = 31.0
scale = Vector2(0.95, 0.95)
script = ExtResource("1_3v0i1")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(0.730216, 0.730216, 0.730216, 1)
layout_mode = 0
offset_left = -69.0
offset_top = -46.0
offset_right = 1093.0
offset_bottom = 631.0
color = Color(0.207843, 0.168627, 0.25098, 1)

[node name="EnergyBar" parent="." instance=ExtResource("2_gwan3")]
layout_mode = 1
offset_left = 212.632
offset_top = 11.5789
offset_right = 212.632
offset_bottom = 11.5789
scale = Vector2(4, 4)

[node name="question" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 44.0
offset_right = 748.0
offset_bottom = 158.0

[node name="NinePatchRect" type="NinePatchRect" parent="question"]
layout_mode = 2
texture = ExtResource("2_7hs2c")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="question"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="question/MarginContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.168627, 0.25098, 1)
theme_override_font_sizes/font_size = 24
text = "\"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...\""
horizontal_alignment = 1
autowrap_mode = 2

[node name="NPC_Sprites" type="AnimatedSprite2D" parent="."]
position = Vector2(890.526, 130.526)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_p2kin")
animation = &"wizard_rat"
autoplay = "wizard_rat"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_top = 2.0
offset_right = 256.0
offset_bottom = 146.0
scale = Vector2(4, 4)
texture = ExtResource("7_da0m5")

[node name="solution" type="HBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 217.0
offset_top = 238.0
offset_right = 597.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 25

[node name="first_fraction" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="solution/first_fraction"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="solution/first_fraction/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="solution/first_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="FirstFractionNumerator" type="LineEdit" parent="solution/first_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nmmeg")
placeholder_text = "num"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="Label" type="Label" parent="solution/first_fraction/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_05esg")
text = "-------"

[node name="MarginContainer2" type="MarginContainer" parent="solution/first_fraction/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="solution/first_fraction/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="FirstFractionDenominator" type="LineEdit" parent="solution/first_fraction/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nmmeg")
placeholder_text = "denom"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="opperand" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="Label" type="Label" parent="solution/opperand"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_05esg")
text = "-"

[node name="second_fraction" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="solution/second_fraction"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="solution/second_fraction/VBoxContainer"]
layout_mode = 2

[node name="SecondFractionNumerator" type="LineEdit" parent="solution/second_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nmmeg")
placeholder_text = "num"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/second_fraction/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="solution/second_fraction/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_05esg")
text = "-------"

[node name="MarginContainer2" type="MarginContainer" parent="solution/second_fraction/VBoxContainer"]
layout_mode = 2

[node name="SecondFractionDenominator" type="LineEdit" parent="solution/second_fraction/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nmmeg")
placeholder_text = "denom"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/second_fraction/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="equals" type="MarginContainer" parent="solution"]
layout_mode = 2

[node name="Label" type="Label" parent="solution/equals"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_05esg")
text = "="

[node name="answer" type="MarginContainer" parent="solution"]
texture_filter = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="solution/answer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="solution/answer/VBoxContainer"]
layout_mode = 2

[node name="NumeratorAnswer" type="LineEdit" parent="solution/answer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nmmeg")
placeholder_text = "num"
alignment = 1
max_length = 3
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/answer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="solution/answer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_05esg")
text = "-------"

[node name="MarginContainer2" type="MarginContainer" parent="solution/answer/VBoxContainer"]
layout_mode = 2

[node name="DenominatorAnswer" type="LineEdit" parent="solution/answer/VBoxContainer/MarginContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nmmeg")
placeholder_text = "denom"
alignment = 1
max_length = 3
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="solution/answer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="submit" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 346.0
offset_top = 458.0
offset_right = 458.0
offset_bottom = 492.0
scale = Vector2(3, 3)

[node name="NinePatchRect" type="NinePatchRect" parent="submit"]
layout_mode = 2
texture = ExtResource("10_tw1ng")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="submit"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SubmitAnswer" type="Button" parent="."]
layout_mode = 0
offset_left = 357.0
offset_top = 479.0
offset_right = 669.0
offset_bottom = 548.0
theme_override_fonts/font = ExtResource("9_05esg")
text = "SUBMIT"
flat = true

[node name="DisplayAnswer" type="MarginContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 86.0
offset_top = 374.0
offset_right = 936.0
offset_bottom = 414.0
grow_horizontal = 2
grow_vertical = 2

[node name="UserAnswer" type="Label" parent="DisplayAnswer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Display if answer is right or wrong."
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 881.0
offset_top = 495.0
offset_right = 985.0
offset_bottom = 535.0

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("9_05esg")
text = "RETURN"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("8_pyrl6")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="CorrectAnswerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_qy7u5")
volume_db = -23.583

[node name="WrongAnswerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_81rye")
volume_db = -24.36

[connection signal="correct" from="." to="." method="_on_correct_answer"]
[connection signal="incorrect" from="." to="." method="_on_incorrect_answer"]
[connection signal="button_down" from="SubmitAnswer" to="." method="_on_submit_answer_button_down"]
[connection signal="button_down" from="MarginContainer/Button" to="." method="return_to_world"]
